# 8086_emulator

./: .gitignore  CMakeLists.txt  README.md
include/: exceptions.hpp  flags.hpp  interrupts.hpp  memory.hpp  op_codes.hpp  registers.hpp  utilities.hpp
src/: flags.cpp  interrupts.cpp  memory.cpp  op_codes.cpp  registers.cpp  utilities.cpp
tests/: memory.cpp  op_codes.cpp  registers.cpp
